--- a/app.css
+++ b/app.css
@@ -272,7 +272,7 @@ main {
   display: inline-flex;
   padding: 16px;
   flex-direction: column;
-  align-items: flex-start;
+  /* align-items: flex-start; */
   gap: 16px;
   border-radius: 14px;
   border: 1px solid var(--stroke-s-50, #dbdbdb);
@@ -280,7 +280,7 @@ main {
   position: absolute;
   top: 64px;
   z-index: 22;
-  width: 351px;
+  width: 358px;
   right: 16px;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
   display: none;
@@ -289,7 +289,7 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  align-self: stretch;
+  /* align-self: stretch; */
 }
 .notification-popup-header-title {
   color: #303030;
@@ -308,6 +308,7 @@ main {
   font-size: var(--text-sm, 13px);
   font-weight: 600;
   line-height: 140%;
+  align-self: stretch;
 }
 .menu-dropdown {
   display: flex;
@@ -734,7 +735,7 @@ main {
     padding: 0;
   }
   .notification-popup {
-    width: 326px;
+    width: 354px;
   }
   .notification-popup-content {
     text-align: center;
